[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/Information.gd" type="Script" id=1]
[ext_resource path="res://scenes/AddFoodSource.tscn" type="PackedScene" id=2]

[sub_resource type="GDScript" id=1]
script/source = "extends LineEdit

func _ready() -> void:
	set_as_toplevel(true)
"

[node name="Information" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="Database" type="Tree" parent="VBoxContainer"]
margin_right = 512.0
margin_bottom = 568.0
size_flags_vertical = 3
columns = 4
column_titles_visible = true
hide_root = true

[node name="EditItem" type="LineEdit" parent="VBoxContainer/Database"]
unique_name_in_owner = true
visible = false
margin_right = 134.0
margin_bottom = 30.0
expand_to_text_length = true
script = SubResource( 1 )

[node name="ShowFSDlg" type="Button" parent="VBoxContainer"]
margin_top = 572.0
margin_right = 512.0
margin_bottom = 600.0
text = "Add Food Source"

[node name="AddFoodSource" parent="VBoxContainer" instance=ExtResource( 2 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 478.0
margin_right = 512.0
margin_bottom = 600.0

[node name="DimScreen" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -42.0
margin_top = -196.0
margin_right = 80.0
margin_bottom = -162.0
color = Color( 0, 0, 0, 0.266667 )

[node name="ExcScreen" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.266667 )

[connection signal="button_pressed" from="VBoxContainer/Database" to="." method="_on_Database_button_pressed"]
[connection signal="text_entered" from="VBoxContainer/Database/EditItem" to="." method="_on_edited_tree_item"]
[connection signal="pressed" from="VBoxContainer/ShowFSDlg" to="." method="_on_ShowFSDlg_pressed"]
[connection signal="add_food_source" from="VBoxContainer/AddFoodSource" to="." method="_on_AddFoodSource_add_food_source"]
[connection signal="visibility_changed" from="VBoxContainer/AddFoodSource" to="." method="_on_AddFoodSource_visibility_changed"]
